update_added_sorting

--- a/static/css/main_search.css
+++ b/static/css/main_search.css
@@ -54,9 +54,11 @@ body{
    positon: absolute;
    top:
 }
-#collapse1{
-overflow-y:scroll;
-height:420px;
+
+#collapse1 {
+  overflow-y: scroll;
+  height: 420px;
+}
 
 .access h1{
   text-align: left;
