--- a/crawler/templates/main_search.html
+++ b/crawler/templates/main_search.html
@@ -1,9 +1,11 @@
 {% load static%}
 {% block content %}
+
 <head>
     <title>crawler</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/main_search.css' %}">
@@ -13,137 +15,40 @@
     <div class="container">
         <div class="input-group mb-3">
             <div class="input-group-append">
-                <form class="d-flex" method=POST action="{% url 'searched_page' %}">
+                <form class="d-flex" method='POST'>
                     {% csrf_token %}
                 <!-- This is the search bar. -->
-                    <input type="text" class="form-control" placeholder="Search...." name="search">
+                    <input type="text" class="form-control" placeholder="Search...." name="search-input">
                     <button class="btn btn-outline-secondary" type="submit" value="">Search</button>
                 </form>
             </div>
 
         </div>
-        <!--div class="dropdown show">
-            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown link
-            </a>
-
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-        </div>-->
         <div id="collapse1">
             <table class="table table-striped table-white">
                 <thead>
                 <tr>
-                    <th scope="col">No.</th>
+                    <th scope="col"><a href="#">No.</a></th>
                     <th scope="col">Name</th>
-                    <th scope="col">Price</th>
-                    <th scope="col">Rating</th>
-                    <th scope="col">Link</th>
+                    <th scope="col"><a href="?sort=price&searchItem={{ searchItem }}">Price</a></th>
+                    <th scope="col" data-field="rating"><a href="?sort=rating&searchItem={{ searchItem }}">Rating</a></th>
                 </tr>
                 </thead>
+
                 {% for k, v in data.items %}
-                <tbody>
+                <tbody >
                 <tr>
                     <th scope="row">{{ k }}</th>
-                    <td>{{ v.name }}</td>
+                    <td><a href="https://{{ v.link }}" target="_blank" rel="noopener noreferrer">{{ v.name }}</a></td>
                     <td>{{ v.price }}</td>
                     <td>{{ v.rating }}</td>
-                    <td>{{ v.link }}</td>
                 </tr>
-
-<!--                <tr>-->
-<!--                    <th scope="row">1</th>-->
-<!--                    <td>Mark</td>-->
-<!--                    <td>Otto</td>-->
-<!--                    <td>@mdo</td>-->
-<!--                    <td>link</td>-->
-<!--                </tr>-->
-<!--                <tr>-->
-<!--                    <th scope="row">1</th>-->
-<!--                    <td>Mark</td>-->
-<!--                    <td>Otto</td>-->
-<!--                    <td>@mdo</td>-->
-<!--                    <td>link</td>-->
-<!--                </tr>-->
-<!--                <tr>-->
-<!--                    <th scope="row">2</th>-->
-<!--                    <td>Mark</td>-->
-<!--                    <td>Otto</td>-->
-<!--                    <td>@mdo</td>-->
-<!--                    <td>link</td>-->
-<!--                </tr>-->
-<!--                <tr>-->
-<!--                    <th scope="row">3</th>-->
-<!--                    <td>Mark</td>-->
-<!--                    <td>Otto</td>-->
-<!--                    <td>@mdo</td>-->
-<!--                    <td>link</td>-->
-<!--                </tr>-->
-<!--                <tr>-->
-<!--                    <th scope="row">4</th>-->
-<!--                    <td>Mark</td>-->
-<!--                    <td>Otto</td>-->
-<!--                    <td>@mdo</td>-->
-<!--                    <td>link</td>-->
-<!--                </tr>-->
-<!--                <tr>-->
-<!--                    <th scope="row">5</th>-->
-<!--                    <td>Mark</td>-->
-<!--                    <td>Otto</td>-->
-<!--                    <td>@mdo</td>-->
-<!--                    <td>link</td>-->
-<!--                </tr>-->
-<!--                <tr>-->
-<!--                    <th scope="row">6</th>-->
-<!--                    <td>Mark</td>-->
-<!--                    <td>Otto</td>-->
-<!--                    <td>@mdo</td>-->
-<!--                    <td>link</td>-->
-<!--                </tr>-->
-<!--                <tr>-->
-<!--                    <th scope="row">7</th>-->
-<!--                    <td>Mark</td>-->
-<!--                    <td>Otto</td>-->
-<!--                    <td>@mdo</td>-->
-<!--                    <td>link</td>-->
-<!--                </tr>-->
-<!--                <tr>-->
-<!--                    <th scope="row">8</th>-->
-<!--                    <td>Mark</td>-->
-<!--                    <td>Otto</td>-->
-<!--                    <td>@mdo</td>-->
-<!--                    <td>link</td>-->
-<!--                </tr>-->
-<!--                <tr>-->
-<!--                    <th scope="row">9</th>-->
-<!--                    <td>Mark</td>-->
-<!--                    <td>Otto</td>-->
-<!--                    <td>@mdo</td>-->
-<!--                    <td>link</td>-->
-<!--                </tr>-->
-<!--                <tr>-->
-<!--                    <th scope="row">10</th>-->
-<!--                    <td>Mark</td>-->
-<!--                    <td>Otto</td>-->
-<!--                    <td>@mdo</td>-->
-<!--                    <td>link</td>-->
-<!--                </tr>-->
-<!--                <tr>-->
-<!--                    <th scope="row">11</th>-->
-<!--                    <td>Mark</td>-->
-<!--                    <td>Otto</td>-->
-<!--                    <td>@mdo</td>-->
-<!--                    <td>link</td>-->
-<!--                </tr>-->
                 </tbody>
                 {% endfor %}
             </table>
         </div>
     </div>
 </div>
+
 </body>
 {% endblock content %}
